# Set build arguments here. See `gn help buildargs`.
is_component_build = true
# 禁止调试
is_debug = false
dcheck_always_on = false
# 删除各种符号
symbol_level = 0
v8_symbol_level=0
enable_nacl = false
blink_symbol_level=0
disable_libfuzzer=true
enable_hangout_services_extension=false
enable_native_notifications=false
enable_webrtc=false
headless_use_embedded_resources = false
disable_fieldtrial_testing_config = true